--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@as-integrations/express4": "^1.1.2",
     "bulma": "^1.0.3",
     "graphql": "^16.11.0",
+    "graphql-request": "^7.2.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
