--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^4.0.0",
     "@apollo/server": "^5.0.0",
     "@as-integrations/express4": "^1.1.2",
     "bulma": "^1.0.3",
