--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "graphql": "^16.11.0",
     "jsonwebtoken": "^9.0.0",
     "knex": "^3.0.1",
-    "nanoid": "^5.0.1"
+    "nanoid": "^5.0.1",
+    "sqlite": "^5.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
